Replaced RPi.GPIO with Jetson.GPIO Changed ping numbering from GPIO.BDM -> GPIO.BOARD

--- a/Documentation/L9110S_DC.md
+++ b/Documentation/L9110S_DC.md
@@ -94,7 +94,7 @@ rpiMotorLib repository.
 
 ```sh
 import time 
-import RPi.GPIO as GPIO
+import Jetson.GPIO as GPIO
 from RpiMotorLib import rpi_dc_lib 
 
 def motorone():
